# portfu

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: ci.yml  lint.yml
example_portfu_server/: Cargo.toml
example_portfu_server/src/: main.rs
pf_admin/: Cargo.toml
pf_admin/front_end_src/: package.json  svelte.config.js  vite.config.js
pf_admin/front_end_src/src/components/: BlogEditor.svelte  Login.svelte  UserManager.svelte
pf_admin/front_end_src/src/routes/: +page.svelte
pf_admin/src/: lib.rs
pf_admin/src/editor/: mod.rs
portfu/: Cargo.toml
portfu/src/: client.rs  lib.rs  main.rs  server.rs  ssl.rs
portfu/src/endpoints/: edit.rs  mod.rs  oauth_login.rs
portfu/src/filters/: method.rs  mod.rs
portfu/src/wrappers/: cors.rs  metrics.rs  mod.rs  rate_limits.rs  sessions.rs
portfu_admin/: Cargo.toml
portfu_admin/front_end_dist/themes/default/: template.html
portfu_admin/front_end_dist/themes/default/pages/: index.html
portfu_admin/front_end_src/: .gitignore  jsconfig.json  package.json  readme.md  svelte.config.js  tailwind.config.cjs
portfu_admin/front_end_src/src/: app.html  app.pcss
portfu_admin/front_end_src/src/components/: Chart.svelte  DatabaseEditor.svelte  FileEditor.svelte  FileManager.svelte  Footer.svelte  Header.svelte  Home.svelte  LeftNav.svelte  Profile.svelte  Search.svelte  Stat.svelte
portfu_admin/front_end_src/src/lib/: stores.js  transitions.js
portfu_admin/front_end_src/src/lib/assets/data/: userProfile.json
portfu_admin/front_end_src/src/routes/: +layout.svelte  +page.svelte
portfu_admin/src/: lib.rs
portfu_admin/src/auth/: github.rs  mod.rs  oauth_login.rs
portfu_admin/src/editor/: mod.rs
portfu_admin/src/pages/: mod.rs
portfu_admin/src/services/: editor.rs  mod.rs  themes.rs  users.rs
portfu_admin/src/stores/: cache.rs  memory.rs  mod.rs  postgres.rs
portfu_admin/src/templates/: mod.rs
portfu_admin/src/theme/: default.rs  mod.rs
portfu_admin/src/themes/: default.rs  mod.rs  page.rs  template.rs  token.rs
portfu_admin/src/users/: manager.rs  mod.rs
portfu_admin/src/utils/: cache.rs
portfu_core/: Cargo.toml
portfu_core/src/: cache.rs  data_map.rs  editable.rs  files.rs  filters.rs  lib.rs  npm_service.rs  paths.rs  route.rs  routes.rs  server.rs  service.rs  sockets.rs  ssl.rs  svelte_spa.rs  task.rs  wrappers.rs
portfu_macros/: Cargo.toml
portfu_macros/src/: endpoints.rs  http.rs  interval.rs  lib.rs  method.rs  routes.rs  static_files.rs  task.rs  websocket.rs
portfu_macros/src/client/: websocket.rs
portfu_macros/src/server/: endpoints.rs  files.rs  interval.rs  mod.rs  static_files.rs  task.rs  websocket.rs
portfu_operator/: Cargo.toml
portfu_operator/src/: lib.rs  main.rs
portfu_operator/src/kube/: mod.rs
portfu_operator/src/services/: kube.rs  mod.rs
portfu_runtime/: Cargo.toml
portfu_runtime/src/: config.rs  main.rs
