[workspace]
resolver = "2"

members = [
    "example_portfu_server",
    "portfu",
    "portfu_core",
    "portfu_macros"
]

[workspace.dependencies]
async-trait = "0.1.79"
cookie = "0.18.0"
futures-util = "0.3.30"
hex = "0.4.3"
http = "1.1.0"
http-body-util = { version = "0.1.1"}
hyper = {version="1.2.0", features=["full"]}
hyper-util = {version="0.1.3", features=["full"]}
log = "0.4.21"
once_cell = "1.19.0"
portfu_core = {path = "./portfu_core"}
portfu_macros = {path = "./portfu_macros"}
portfu = {path = "./portfu"}
regex = { version = "1.10.4", features = [] }
rustls = { version= "0.23.4", features = ["ring"] }
rustls-pemfile = "2.1.1"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
simple_logger = "4.3.3"
tokio = {version = "1.36.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
tokio-rustls = "0.26.0"
tokio-tungstenite = {version = "0.21.0", features = ["rustls-tls-webpki-roots", "rustls"] }
uuid = {version = "1.8.0", features = ["v4"]}
x509-cert = "0.2.5"