[workspace]
resolver = "2"

members = [
    "portfu_runtime",
    "portfu_admin",
    "portfu",
    "portfu_core",
    "portfu_macros",
    "portfu_operator"
]

[workspace.dependencies]
async-trait = "0.1.80"
cookie = "0.18.1"
dashmap = "5.5.3"
futures-core = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
http = "1.1.0"
http-body = "1.0.0"
http-body-util = { version = "0.1.1"}
hyper = {version="1.3.1", features=["full"]}
hyper-util = {version="0.1.5", features=["full"]}
jsonwebtoken = "9"
log = "0.4.21"
mime_guess = "2.0.4"
notify = "6.1.1"
once_cell = "1.19.0"
portfu = {path = "./portfu", version = "1.2.0", default-features = false}
portfu_admin = {path = "./portfu_admin", version = "1.2.0", default-features = false}
portfu_core = {path = "./portfu_core", version = "1.2.0", default-features = false}
portfu_macros = {path = "./portfu_macros", version = "1.2.0", default-features = false}
portfu_operator = {path = "./portfu_operator", version = "1.2.0", default-features = false}
portfu_operator_lib = {path = "./portfu_operator", version = "1.2.0", default-features = false}
portfu_runtime = {path = "./portfu_runtime", version = "1.2.0", default-features = false}
portfu_runtime_lib = {path = "./portfu_runtime", version = "1.2.0", default-features = false}
prometheus = "0.13.4"
proc-macro2 = "1.0.84"
quote = "1.0.36"
rand = "0.8.5"
regex = "1.10.4"
reqwest = {version="0.12.4", default-features = false, features = ["rustls-tls", "json", "stream"] }
rustls = { version= "0.23.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2.1.2"
rsa = { version = "0.9.6", features = ["std", "pem", "sha2"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_html_form = "0.2.7"
serde_json = "1.0.117"
sha2 = "0.10.8"
simple_logger = "5.0.0"
struct-field-names-as-array = "0.3.0"
syn = { version="2.0.66", features = ["extra-traits"]}
time = { version = "0.3.36", features = ["serde-well-known"] }
tokio = {version = "1.38.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
tokio-rustls = "0.26.0"
tokio-tungstenite = {version = "0.21.0", features = ["rustls-tls-webpki-roots", "rustls"] }
tokio-util = "0.7.11"
url = "2.5.0"
uuid = {version = "1.8.0", features = ["v4", "serde"]}
x509-cert = { version = "0.2.5", features = ["std", "pem", "builder"] }
webpki-roots = "0.26.1"