[package]
name = "example_portfu_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
oauth2 = "4.4.2"
octocrab = "0.34.3"
portfu.workspace = true
simple_logger.workspace = true
tokio.workspace = true