[package]
name = "example_portfu_server"
version = "0.1.0"
edition = "2021"
authors = ["James Hoerr"]
description = "Rust HTTP Server Libary built Around Hyper.rs with Macros Similar to Actix "
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/portfu"
repository = "https://github.com/GalactechsLLC/portfu/example_portfu_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
oauth2 = "4.4.2"
octocrab = "0.34.3"
portfu = {path = "../portfu", version = "0.1.0"}
simple_logger = "4.3.3"
tokio = {version = "1.37.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}