[package]
name = "portfu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
cookie.workspace = true
dashmap = "5.5.3"
futures-util.workspace = true
hex.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
log.workspace = true
oauth2 = "4.4.2"
octocrab = "0.34.3"
once_cell.workspace = true
portfu_core.workspace = true
portfu_macros.workspace = true
reqwest = {version= "0.12.2", features=["json", "rustls-tls-webpki-roots"]}
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
x509-cert.workspace = true
serde_json = "1.0.115"
