[package]
name = "portfu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
cookie = "0.18.0"
dashmap = "5.5.3"
futures-util = "0.3.30"
hex = "0.4.3"
http = "1.1.0"
http-body-util = { version = "0.1.1"}
hyper = {version="1.2.0", features=["full"]}
hyper-util = {version="0.1.3", features=["full"]}
log = "0.4.21"
oauth2 = "4.4.2"
octocrab = "0.34.3"
once_cell = "1.19.0"
portfu_core = {path = "../portfu_core", version = "0.1.0"}
portfu_macros = {path = "../portfu_macros", version = "0.1.0"}
reqwest = {version= "0.12.2", features=["json", "rustls-tls-webpki-roots"]}
rustls = { version= "0.23.4", features = ["ring"] }
rustls-pemfile = "2.1.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"
tokio = {version = "1.37.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
tokio-rustls = "0.26.0"
tokio-tungstenite = {version = "0.21.0", features = ["rustls-tls-webpki-roots", "rustls"] }
uuid = {version = "1.8.0", features = ["v4"]}
x509-cert = "0.2.5"

[features]
default = []
github_auth = []
