[package]
name = "portfu"
version = "1.3.0"
edition = "2021"
authors = ["James Hoerr"]
description = "Rust HTTP Server Libary built Around Hyper.rs with Macros Similar to Actix "
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/portfu"
repository = "https://github.com/GalactechsLLC/portfu/portfu"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
cookie.workspace = true
dashmap.workspace = true
futures-util.workspace = true
hex.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
log.workspace = true
once_cell.workspace = true
portfu_core.workspace = true
portfu_macros.workspace = true
prometheus.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
webpki-roots.workspace = true

