[package]
name = "portfu_admin"
version = "1.2.0"
edition = "2021"
authors = ["James Hoerr"]
description = "Library of Admin tools build on toip of Portfu"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/portfu"
repository = "https://github.com/GalactechsLLC/portfu/portfu_admin"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portfu = {path = "../portfu", version = "1.2.0"}
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
time = { version = "0.3.36", features = ["serde-well-known"] }
tokio = {version = "1.37.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
struct-field-names-as-array = "0.3.0"
regex = "1.10.4"

[features]
default = []
github_auth = []
