[package]
name = "portfu_admin"
version = "1.2.0"
edition = "2021"
authors = ["James Hoerr"]
description = "Library of Admin tools build on toip of Portfu"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/portfu"
repository = "https://github.com/GalactechsLLC/portfu/portfu_admin"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
hyper = {version="1.2.0", features=["full"]}
oauth2 = { version = "4.4.2", features = ["rustls-tls"] }
octocrab = {version = "0.38.0", features = ["rustls"]}
portfu = {path = "../portfu", version = "1.2.0"}
reqwest = {version="0.12.4", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde_json = "1.0.116"
serde = { version = "1.0.200", features = ["derive"] }
time = { version = "0.3.36", features = ["serde-well-known"] }
tokio = {version = "1.37.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
sqlx = { version ="0.7.4", optional = true, features = ["time"]}
struct-field-names-as-array = "0.3.0"
regex = "1.10.4"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
