[package]
name = "portfu_admin"
version = "1.2.0"
edition = "2021"
authors = ["James Hoerr"]
description = "Library of Admin tools build on toip of Portfu"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/portfu"
repository = "https://github.com/GalactechsLLC/portfu/portfu_admin"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap.workspace = true
http.workspace = true
hyper.workspace = true
jsonwebtoken.workspace = true
log = "0.4.25"
oauth2 = { version = "4.4.2", optional = true, features = ["rustls-tls"] }
octocrab = {version = "0.38.0", optional = true, features = ["rustls"]}
portfu.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
time.workspace = true
tokio.workspace = true
sqlx = { version ="0.7.4", optional = true, default-features = false, features = ["time"]}
struct-field-names-as-array.workspace = true
regex.workspace = true

[features]
default = []
auth = ["oauth2"]
github_auth = ["auth", "octocrab"]
postgres = ["sqlx", "sqlx/postgres"]
mysql = ["sqlx", "sqlx/mysql"]
