[package]
name = "portfu_core"
version = "1.2.0"
edition = "2021"
description = "Portfu Core Types and Definitions Library"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/portfu"
repository = "https://github.com/GalactechsLLC/portfu/portfu_core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
futures-util = "0.3.30"
http = "1.1.0"
http-body = "1.0.0"
http-body-util = { version = "0.1.1"}
hyper = {version="1.2.0", features=["full"]}
hyper-util = {version="0.1.3", features=["full"]}
log = "0.4.21"
mime_guess = "2.0.4"
once_cell = "1.19.0"
regex = { version = "1.10.4", features = [] }
reqwest = {version="0.12.4", default-features = false, features = ["rustls-tls", "stream"] }
rustls = { version= "0.23.4" }
rustls-pemfile = "2.1.2"
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
tokio = {version = "1.37.0", features=["rt-multi-thread", "sync", "signal", "macros", "process", "time", "fs", "net"]}
tokio-rustls = "0.26.0"
tokio-tungstenite = {version = "0.21.0", features = ["rustls-tls-webpki-roots", "rustls"] }
tokio-util = "0.7.10"
uuid = {version = "1.8.0", features = ["v4"]}
