[package]
name = "portfu_core"
version = "1.2.0"
edition = "2021"
description = "Portfu Core Types and Definitions Library"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/portfu"
repository = "https://github.com/GalactechsLLC/portfu/portfu_core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
log.workspace = true
mime_guess.workspace = true
notify.workspace = true
once_cell.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
rsa.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde_html_form.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
urlencoding = "2.1.3"
uuid.workspace = true
x509-cert.workspace = true
