[package]
name = "portfu_macros"
version = "1.2.0"
edition = "2021"
authors = ["James Hoerr"]
description = "Portfu Macros for Generating Endpoints and Tasks"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/portfu"
repository = "https://github.com/GalactechsLLC/portfu/portfu_macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
async-trait = "0.1.80"
http = "1.1.0"
http-body-util = { version = "0.1.1"}
hyper = {version="1.2.0", features=["full"]}
mime_guess = "2.0.4"
portfu_core = {path = "../portfu_core", version = "1.2.0"}
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = { version="2.0.60", features = ["extra-traits"]}
tokio = {version = "1.37.0" , default-features = false, features = ["fs"]}
url = "2.5.0"
