[package]
name = "portfu_macros"
version = "1.3.3"
edition = "2021"
authors = ["James Hoerr"]
description = "Portfu Macros for Generating Endpoints and Tasks"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/portfu"
repository = "https://github.com/GalactechsLLC/portfu/portfu_macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
async-trait.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
mime_guess.workspace = true
portfu_core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
tokio.workspace = true
url.workspace = true
