[package]
name = "portfu_operator"
version = "1.3.1"
edition = "2021"
authors = ["James Hoerr"]
description = "Portfu Kubernetes Operator with Web UI"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/portfu"
repository = "https://github.com/GalactechsLLC/portfu/portfu_operator"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "portfu_operator"
path ="src/main.rs"


[lib]
name = "portfu_operator_lib"
path ="src/lib.rs"


[dependencies]
kube = { version = "0.88.1", features = ["client", ] }
k8s-openapi = { version = "0.21.1", default-features = false, features = ["v1_27"]}
log.workspace = true
portfu.workspace = true
portfu_admin = {workspace = true, features = ["postgres", "mysql"]}
portfu_runtime = {workspace = true}
rustls.workspace = true
simple_logger.workspace = true
tokio.workspace = true
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.33"
