[package]
name = "portfu_runtime"
version = "0.1.1"
edition = "2021"
authors = ["James Hoerr"]
description = "Default Portfu Runtime"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/portfu"
repository = "https://github.com/GalactechsLLC/portfu/portfu_runtime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
portfu.workspace = true
portfu_admin.workspace = true
simple_logger.workspace = true
tokio.workspace = true

[features]
default = []