[package]
name = "portfu_runtime"
version = "1.2.0"
edition = "2021"
authors = ["James Hoerr"]
description = "Default Portfu Runtime"
license = "Apache-2.0"
homepage = "https://github.com/GalactechsLLC/portfu"
repository = "https://github.com/GalactechsLLC/portfu/portfu_runtime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "portfu_runtime"
path = "src/main.rs"

[lib]
name ="portfu_runtime_lib"
path = "src/lib.rs"

[dependencies]
log.workspace = true
portfu.workspace = true
portfu_admin = {workspace = true, features = ["postgres", "mysql"]}
simple_logger.workspace = true
sqlx = { version = "0.8.3", optional = true, default-features = false, features = ["time"]}
tokio.workspace = true
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.33"

[features]
default = []
postgres = ["sqlx", "sqlx/postgres"]
mysql = ["sqlx", "sqlx/mysql"]
sqlite = ["sqlx", "sqlx/sqlite"]